--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 
-title: Timbre-based music interactive system
+title: Timbre-based music interactive system - Participant Information Sheet
